# Rust-Vulkan-TressFX

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  compile_shaders.py  frag.spv  makefile  vert.spv
assets/: .gitignore
assets/shaders/: _config_ubo.glsl  _dither.glsl  _forward_model_ubo.glsl  _fxaa.glsl  _kajiyakay.glsl  _material.glsl  _separableSSSSS.glsl  _shadows.glsl  _tonemappers.glsl  _tressFX.vert.glsl  _tressFXParams_ubo.glsl  _utils.glsl  blur.frag.glsl  forward.frag.glsl  forward.vert.glsl  fullscreen_quad.vert.glsl  linearDepth.frag.glsl  linear_depth.frag.glsl  present.frag.glsl  shadow_map_gen.frag.glsl  shadow_map_gen.vert.glsl  ssao.frag.glsl  sssBlur.frag.glsl  sss_blur.frag.glsl  tfx_forward.frag.glsl  tfx_forward.vert.glsl  tfx_shadow_map_gen.vert.glsl  tonemapping.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
assets/shaders/materials/: _hair.glsl  _kajiyakay.glsl  _pbr.glsl  _separableSSSSS.glsl  _shadows.glsl
assets/shaders/postfx/: _color_grading.glsl  _fxaa.glsl
assets/shaders/tfx_render/: _tfx_params_ubo.glsl  _tfx_ppll_resolve_impl.glsl  _tfx_ppll_shared.glsl  _tfx_vertex_resolve.glsl  tfx_depth_only.vert.glsl  tfx_forward.frag.glsl  tfx_forward.vert.glsl  tfx_ppll_build.frag.glsl  tfx_ppll_build.vert.glsl  tfx_ppll_resolve.frag.glsl  tfx_shadow_map_gen.vert.glsl
assets/shaders/tfx_simulation/: _sim_buffers.glsl  _sim_capsule_collision.glsl  _sim_common.glsl  _sim_params.glsl  sim0_IntegrationAndGlobalShapeConstraints.comp.glsl  sim1_VelocityShockPropagation.md  sim2_LocalShapeConstraints.comp.glsl  sim3_LengthConstraintsWindAndCollision.comp.glsl
src/: app_input.rs  app_timer.rs  app_ui.rs  config.rs  gpu_profiler.rs  main.rs  render_graph.rs  utils.rs  vk_app.rs  vk_init.rs
src/config/: camera.rs  color_grading.rs  light.rs  postfx.rs  shadows.rs  ssao.rs  sss.rs  tfx_simulation.rs
src/render_graph/: blur_pass.rs  forward_pass.rs  linear_depth_pass.rs  mod.rs  present_pass.rs  shadow_map_pass.rs  ssao_pass.rs  sss_blur_pass.rs  sss_depth_pass.rs  tfx_forward_pass.rs  tfx_render.rs  tfx_simulation.rs  tonemapping_pass.rs
src/render_graph/_shared/: forward_model_ubo.rs  frame_data.rs  global_config_ubo.rs  global_config_uniform_buffer.rs  image_layout_utils.rs  mod.rs  pass_exec_context.rs  per_frame_resources.rs  render_graph_resources.rs  renderable_vertex.rs  tfx_params_ubo.rs
src/render_graph/misc/: mod.rs  renderable_vertex.rs  scene_uniform_buffer.rs
src/render_graph/tfx_render/: tfx_depth_only_pass.rs  tfx_forward_pass.rs  tfx_ppll_build_pass.rs  tfx_ppll_resolve_pass.rs
src/render_graph/tfx_simulation/: tfx_sim0_pass.rs  tfx_sim2_pass.rs  tfx_sim3_pass.rs
src/renderer/: main.rs
src/scene/: bounding_box.rs  camera.rs  material.rs  mod.rs  tressfx.rs  world.rs  world_entity.rs
src/scene/tressfx/: tfx_file_data.rs  tfx_file_load.rs  tfx_material.rs  tfx_object.rs
src/shaders/: triangle.frag.glsl  triangle.vert.glsl
src/vk_ctx/: mod.rs  vk_ctx.rs  vk_ctx_buffers.rs  vk_ctx_command_buffers.rs  vk_ctx_device.rs  vk_ctx_initialize.rs  vk_ctx_per_swapchain_image_data.rs  vk_ctx_pipelines.rs  vk_ctx_render_passes.rs  vk_ctx_resources.rs  vk_ctx_swapchain.rs  vk_ctx_swapchain_image.rs  vk_ctx_synchronize.rs
src/vk_utils/: README.md  buffer.rs  command_buffers.rs  create_barrier.rs  create_command_buffers.rs  create_command_pool.rs  create_fences.rs  create_framebuffer.rs  create_image_view.rs  create_sampler.rs  create_semaphores.rs  create_viewport.rs  debug.rs  device.rs  draw.rs  fbo.rs  load_shader.rs  mod.rs  pipeline.rs  render_pass.rs  resources.rs  setup_cmd_buf.rs  shaders.rs  swapchain.rs  synchronization.rs  uniforms.rs  vk_buffer.rs  vk_memory_resource.rs  vk_texture.rs  vk_texture_sync.rs
