[package]
name = "rs-tressfx"
version = "1.0.0"
authors = ["Scthe <marcin1113C@gmail.com>"]
edition = "2018"
description = "Implementation of AMD's TressFX hair rendering and simulation technology using Rust and Vulkan."
repository = "https://github.com/scthe/Rust-Vulkan-TressFX"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
# I don't use debugger and it cuts .exe size in half
debug = 0


[dependencies]
# -- part of std lib, but rust is...
rand = "*"
# --LOGGING
log = "^0.4"
simple_logger = "^1.11.0"
# --CONSTS WITH INITIALIZATION
lazy_static = "1.4.0"
# --DESERIALIZE
# serde = { version = "^1.0.8", features = ["derive"] }
# --CONFIG
# config = "^0.10.1"
# --CLI
# clap = "2.33.1"
# --MATH
glam = { version = "^0.24.2", features = ["debug-glam-assert"] }
# --MATH - interoperability with imgui
mint = "0.5.9"
# --FILE WATCHER
# inotify = "0.8.2"
# --DOT ENV
# dotenv = "0.15.0"
# --DYNAMIC LUBRARY LINKING
# libloading
# --PROFILER
# superluminal-perf = "0.1.0"
# --IMPLEMENTS SIMPLE CONSTRUCTOR FUNCTIONS FOR STRUCTS AND ENUMS
# derive-new = "0.5.8"
# --IMPLEMENT DEBUG/DEFAULT/CLONE ETC.
# derivative = "2.1.1"
# --CAST TYPES TO RAW
bytemuck = "1.14"
# --OBJ loader
tobj = "4.0.0"
# --JPEG loader
jpeg-decoder = { version = "0.3.0", features = [] }


# --WINDOW INIT
# winit = "^0.28.0"
winit = "^0.27.5"
# --WINDOWS API
winapi = {version = "^0.3.9",features = [ "winuser"]}
# --LIBC
libc = "^0.2.149"
# --IMGUI
# imgui-sys
# imgui
# --COLOR MANAGEMENT
# palette_derive = "0.5.0"
# --model loading/creation
# gltf = "0.15"
# obj = "0.2.2"
# genmesh = "0.6.2"


# --VULKAN
ash = "^0.37"
# -- layout(std140) GENERATE STRUCT
# glsl_layout
# -- [DEPRECATED] RUST BINDINGS FOR AMD VULKAN MEMORY ALLOCATOR (VMA) - by gwihlidal
# vk-mem = "0.2.2"
# more maintanied version of vk-mem
vma = "0.3.1"
# -- SPIR-V REFLECTION
# https://github.com/gwihlidal/spirv-reflect-rs
# -- VULKAN SYNC UTILITY
# vk-sync = "0.1.6"
# -- SHADERC - VULKAN/SPIR-V SHADER UTILS
# https://github.com/google/shaderc-rs
# -- imgui
imgui = "^0.11"
imgui-winit-support = "^0.11"
# -- imgui with ash and vulkan backend
imgui-rs-vulkan-renderer = "1.10.0"